# docs/source/_static/openapi_v2.json
@@ -5,60 +5,16 @@
     "termsOfService": "https://oe-python-template-example.readthedocs.io/en/latest/",
     "contact": {
       "name": "Helmut Hoffer von Ankershoffen",
-      "url": "https://github.com/helmut-hoffer-von-ankershoffen",
+      "url": "https://github.com/helmut-hoffer-von-ankershoffen/oe-python-template-example",
       "email": "helmuthva@gmail.com"
     },
     "version": "2.0.0"
   },
   "paths": {
-    "/health": {
+    "/hello/world": {
       "get": {
         "tags": [
-          "Observability"
-        ],
-        "summary": "Health",
-        "description": "Check the health of the service.\n\nThis endpoint returns the health status of the service.\nThe health status can be either UP or DOWN.\nIf the service is healthy, the status will be UP.\nIf the service is unhealthy, the status will be DOWN and a reason will be provided.\nThe response will have a 200 OK status code if the service is healthy,\nand a 500 Internal Server Error status code if the service is unhealthy.\n\nReturns:\n    Health: The health status of the service.",
-        "operationId": "health_health_get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Health"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/healthz": {
-      "get": {
-        "tags": [
-          "Observability"
-        ],
-        "summary": "Health",
-        "description": "Check the health of the service.\n\nThis endpoint returns the health status of the service.\nThe health status can be either UP or DOWN.\nIf the service is healthy, the status will be UP.\nIf the service is unhealthy, the status will be DOWN and a reason will be provided.\nThe response will have a 200 OK status code if the service is healthy,\nand a 500 Internal Server Error status code if the service is unhealthy.\n\nReturns:\n    Health: The health status of the service.",
-        "operationId": "health_healthz_get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Health"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/hello-world": {
-      "get": {
-        "tags": [
-          "Basics"
+          "hello"
         ],
         "summary": "Hello World",
         "description": "Return a hello world message.\n\nReturns:\n    _HelloWorldResponse: A response containing the hello world message.",
@@ -77,14 +33,14 @@
         }
       }
     },
-    "/echo": {
+    "/hello/echo": {
       "post": {
         "tags": [
-          "Basics"
+          "hello"
         ],
         "summary": "Echo V2",
         "description": "Echo back the provided utterance.\n\nArgs:\n    request (Utterance): The utterance to echo back.\n\nReturns:\n    Echo: The echo.\n\nRaises:\n    422 Unprocessable Entity: If utterance is not provided or empty.",
-        "operationId": "echo_v2_echo_post",
+        "operationId": "echo_v2_hello_echo_post",
         "requestBody": {
           "content": {
             "application/json": {
@@ -102,6 +58,95 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Echo"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/system/health": {
+      "get": {
+        "tags": [
+          "system"
+        ],
+        "summary": "Health Endpoint",
+        "description": "Determine aggregate health of the system.\n\nThe health is aggregated from all modules making\n    up this system including external dependencies.\n\nThe response is to be interpreted as follows:\n- The status can be either UP or DOWN.\n- If the service is healthy, the status will be UP.\n- If the service is unhealthy, the status will be DOWN and a reason will be provided.\n- The response will have a 200 OK status code if the service is healthy,\n    and a 503 Service Unavailable status code if the service is unhealthy.\n\nArgs:\n    service (Service): The service instance.\n    response (Response): The FastAPI response object.\n\nReturns:\n    Health: The health of the system.",
+        "operationId": "health_endpoint_system_health_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Health"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/healthz": {
+      "get": {
+        "tags": [
+          "system"
+        ],
+        "summary": "Health Endpoint",
+        "description": "Determine aggregate health of the system.\n\nThe health is aggregated from all modules making\n    up this system including external dependencies.\n\nThe response is to be interpreted as follows:\n- The status can be either UP or DOWN.\n- If the service is healthy, the status will be UP.\n- If the service is unhealthy, the status will be DOWN and a reason will be provided.\n- The response will have a 200 OK status code if the service is healthy,\n    and a 503 Service Unavailable status code if the service is unhealthy.\n\nArgs:\n    service (Service): The service instance.\n    response (Response): The FastAPI response object.\n\nReturns:\n    Health: The health of the system.",
+        "operationId": "health_endpoint_healthz_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Health"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/system/info": {
+      "get": {
+        "tags": [
+          "system"
+        ],
+        "summary": "Info Endpoint",
+        "description": "Determine aggregate info of the system.\n\nThe info is aggregated from all modules making up this system.\n\nIf the token does not match the setting, a 403 Forbidden status code is returned.\n\nArgs:\n    service (Service): The service instance.\n    response (Response): The FastAPI response object.\n    token (str): Token to present.\n\nReturns:\n    dict[str, Any]: The aggregate info of the system.",
+        "operationId": "info_endpoint_system_info_get",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Token"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": true,
+                  "title": "Response Info Endpoint System Info Get"
                 }
               }
             }
@@ -157,7 +202,7 @@
       "Health": {
         "properties": {
           "status": {
-            "$ref": "#/components/schemas/HealthStatus"
+            "$ref": "#/components/schemas/_HealthStatus"
           },
           "reason": {
             "anyOf": [
@@ -169,6 +214,13 @@
               }
             ],
             "title": "Reason"
+          },
+          "components": {
+            "additionalProperties": {
+              "$ref": "#/components/schemas/Health"
+            },
+            "type": "object",
+            "title": "Components"
           }
         },
         "type": "object",
@@ -176,16 +228,7 @@
           "status"
         ],
         "title": "Health",
-        "description": "Health status model."
-      },
-      "HealthStatus": {
-        "type": "string",
-        "enum": [
-          "UP",
-          "DOWN"
-        ],
-        "title": "HealthStatus",
-        "description": "Health status enumeration."
+        "description": "Represents the health status of a service with optional components and failure reasons.\n\n- A health object can have child components, i.e. health forms a tree.\n- Any node in the tree can set itself to DOWN. In this case the node is required\n    to set the reason attribute. If reason is not set when DOWN,\n    automatic model validation of the tree will fail.\n- DOWN'ness is propagated to parent health objects. I.e. the health of a parent\n    node is automatically set to DOWN if any of its child components are DOWN. The\n    child components leading to this will be listed in the reason.\n- The root of the health tree is computed in the system module. The health of other\n    modules is automatically picked up by the system module."
       },
       "Utterance": {
         "properties": {
@@ -238,6 +281,14 @@
           "type"
         ],
         "title": "ValidationError"
+      },
+      "_HealthStatus": {
+        "type": "string",
+        "enum": [
+          "UP",
+          "DOWN"
+        ],
+        "title": "_HealthStatus"
       },
       "_HelloWorldResponse": {
         "properties": {
